--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/mvc_db
+spring.datasource.password=developer
+spring.datasource.username=developer
+spring.datasource.driver-class-name=org.postgresql.Driver
