--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mvc_db
 spring.datasource.password=developer
 spring.datasource.username=developer
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+application.jwt.secret=secure-secure-secure-secure-secure-secure-secure-secure-secure-secure
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=2
